new Double(double) -> Double.valueOf(double)